[package]
name = "wlw-server"
version = "0.1.0"
authors = ["Eliza Velasquez <elizagamedev@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "windef", "winuser", "errhandlingapi", "winbase", "winerror"] }
ctrlc = "3.1.1"
log = "0.4"
simple_logger = "1.0.1"

[[bin]]
name = "wlw-server"
path = "src/server/main.rs"

[[bin]]
name = "wlw-hook"
path = "src/hook/main.rs"

[lib]
path = "src/lib.rs"
