[package]
name = "wlw-server"
version = "0.1.0"
authors = ["Eliza Velasquez <elizagamedev@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "windef", "winuser", "errhandlingapi", "winbase", "winerror", "namedpipeapi", "ioapiset", "synchapi"] }
wintrap = "0.1.1"
log = "0.4"
flexi_logger = "0.10.4"
failure = "0.1.5"
crossbeam-channel = "0.3.6"
rlua = "0.16.1"

[target.'cfg(debug_assertions)'.dependencies]
glob = "0.2.11"

[[bin]]
name = "wlw-server"
path = "src/server/main.rs"

[[bin]]
name = "wlw-hook"
path = "src/hook/main.rs"

[lib]
path = "src/lib.rs"
